Fix letter spacing for Photos page headings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,7 +431,7 @@ audio {
     font-family: "Playfair Display", serif;
     font-size: 3.5rem;
     font-weight: 400;
-    letter-spacing: 2px;
+    letter-spacing: 8px;
     text-align: center;
     margin-bottom: 1.5rem;
     margin-top: 1.5rem;
@@ -443,6 +443,7 @@ audio {
     font-family: "Source Sans Pro", sans-serif;
     font-size: 1.75rem;
     font-weight: 300;
+    letter-spacing: 2px;
     text-align: center;
     margin-bottom: 1.75rem;
 }
@@ -528,8 +529,8 @@ body {
 
 /*-------------------------------------------------------------------------Media Queries*/
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 992px) {
     audio {
-    line-height: 2.5rem;
+    line-height: 3rem;
     }
 }
